class 6 mongo crud

--- a/class-5-express-router-and-handlebars/express-handlebars-p2/src/views/register.handlebars
+++ b/class-5-express-router-and-handlebars/express-handlebars-p2/src/views/register.handlebars
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <p>{{style}}</p>
+  <p>{{style}} feo</p>
   <form action="/api/users/" method="post">
     <label>Nombre</label>
     <input name="name" />
