--- a/class-5-express-router-and-handlebars/express-handlebars-p2/src/views/layouts/main.handlebars
+++ b/class-5-express-router-and-handlebars/express-handlebars-p2/src/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="/public/css/{{style}}" />
+    <link rel="stylesheet" href="/static/css/{{style}}.css" />
     <title>{{title}}</title>
   </head>
   <body>
